# nonarrate

./: .gitignore  COMMANDS.md  DEFAULT_NARRATORS.md  ERROR_TYPES.md  IGNORED_FILES.md  README.md  classDiagram.puml  pyproject.toml
lib/: custom_types.py
lib/arg/: __init__.py  arg_assembler.py  arg_checker.py  cli_parser.py  wrong_file_exception.py
lib/arg/actions/: __init__.py
lib/file/: file_executor.py  reader.py  renpy_reader.py  writer.py
lib/validator/dialogue/: custom_text_tag_strategy.py
lib/validator/speaker/: __init__.py  basic_character_strategy.py  character_strategy.py  object_strategy.py
src/lib/: custom_types.py  error_fixer.py  log.py  main.py  narrator_handler.py
src/lib/arg/: __init__.py  arg_assembler.py  arg_checker.py  cli_parser.py
src/lib/arg/actions/: __init__.py  append_unique.py  append_unique_lower.py  remove_unique_const.py  (+1 more)
src/lib/file/: __init__.py  deleter.py  file_executor.py  reader.py  renpy_reader.py  writer.py
src/lib/handler/: atl_info.py  line_info.py
src/lib/info/: atl_info.py  line_info.py
src/lib/validator/: ivalidator_chain.py  ivalidator_chain_solo.py  null_strategy.py  object_strategy.py
tests/: __init__.py  fixture.py
tests/arg/: test_arg_assembler.py  test_arg_checker.py  test_cli_parser.py
tests/arg/actions/: test_append_unique.py  test_append_unique_const.py  test_append_unique_lower.py  test_remove_unique_const.py
tests/file/: test_executor.py  test_reader.py  test_writer.py
tests/validator/: __init__.py  test_character.py  test_dialogue.py  test_quote.py  test_triple_quote.py
(+40 files in other folders)
