[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonarrate"
version = "2.5.0"
requires-python = ">= 3.12"
authors = [
  {name = "Edexal"}
]
maintainers = [
  {name = "Edexal"}
]
description = "Remove narration and thoughts from Ren'Py games."
readme = "README.md"
license = "Unlicense"
license-files = ["UNLICENSE"]

[project.scripts]
nonarrate = "lib.main:run"

[tool.ruff]
line-length = 120
